# ftxui-components

./: .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/src/: CheckboxCustomElements.cpp  TextWrapping.cpp
src/: CMakeLists.txt
src/ftxui-ext/components/: Checkbox.cpp  Checkbox.hpp  Components.hpp
src/ftxui-ext/components/state/: ComponentState.hpp
